fix(ci): add restore-keys for TRT-LLM cache sharing across PRs
With restore-keys, PRs can use cached wheels even if the script hash
doesn't match exactly. This enables:
- PRs to restore from main's cache (base branch)
- Fallback to older cached wheels if script changes slightly

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -267,6 +267,8 @@ jobs:
         with:
           path: /tmp/trtllm-wheel
           key: trtllm-wheel-${{ runner.os }}-cuda13-${{ hashFiles('scripts/ci_install_trtllm.sh') }}
+          restore-keys: |
+            trtllm-wheel-${{ runner.os }}-cuda13-
 
       - name: Install inference backend
         run: |
