--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -3,11 +3,15 @@ name: PR Test (SMG)
 on:
   push:
     branches: [ main ]
-    paths:
-      - "**"
+    paths-ignore:
+      - "docs/**"
+      - "*.md"
   pull_request:
     branches: [ main ]
     types: [opened, synchronize, reopened, labeled]
+    paths-ignore:
+      - "docs/**"
+      - "*.md"
   workflow_dispatch:
 
 permissions:
