--- a/.github/workflows/nightly-benchmark.yml
+++ b/.github/workflows/nightly-benchmark.yml
@@ -181,7 +181,7 @@ jobs:
           # - { id: qwen-7b,     test_class: TestNightlyQwen7bMulti }
           # - { id: qwen-14b,    test_class: TestNightlyQwen14bMulti }
           # - { id: deepseek-7b, test_class: TestNightlyDeepseek7bMulti }
-          # - { id: qwen-30b,    test_class: TestNightlyQwen30bMulti }
+          - { id: qwen-30b,    test_class: TestNightlyQwen30bMulti }
           # - { id: mistral-7b,  test_class: TestNightlyMistral7bMulti }
           # - { id: gpt-oss,     test_class: TestNightlyGptOssMulti }
           # - { id: llama-4-maverick-17b, test_class: TestNightlyLlama4MaverickMulti }
