--- a/model_gateway/Cargo.toml
+++ b/model_gateway/Cargo.toml
@@ -90,6 +90,7 @@ futures-util = "0.3"
 xxhash-rust = { version = "0.8", features = ["xxh3"] }
 tracing-log = "0.2"
 tracing-appender = "0.2.3"
+file-rotate = "0.8.0"
 opentelemetry = "0.27"
 opentelemetry_sdk = { version = "0.27", features = ["trace", "rt-tokio"] }
 opentelemetry-otlp = { version = "0.27", features = ["trace", "grpc-tonic"] }
