perf(ci): use uv for faster vLLM dependency installation
- Replace pip with uv (10-100x faster package resolution)
- Add uv cache to workflow for faster subsequent runs
- Rename cache step from flash-attn to vllm-deps

Expected improvement: ~30-50% faster vLLM install step

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -258,12 +258,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Cache flash-attn build
+      - name: Cache vLLM dependencies
         if: matrix.setup_vllm
         uses: actions/cache@v4
         with:
-          path: ~/.cache/pip/wheels
-          key: flash-attn-${{ runner.os }}-py310-${{ hashFiles('scripts/ci_install_vllm.sh') }}
+          path: |
+            ~/.cache/pip/wheels
+            ~/.cache/uv
+          key: vllm-deps-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
 
       - name: Restore TRT-LLM wheel cache
         id: trtllm-cache
