--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -6,12 +6,12 @@ on:
     paths-ignore:
       - "docs/**"
       - "*.md"
-  # pull_request:
-  #   branches: [ main ]
-  #   types: [opened, synchronize, reopened, labeled]
-  #   paths-ignore:
-  #     - "docs/**"
-  #     - "*.md"
+  pull_request:
+    branches: [ main ]
+    types: [opened, synchronize, reopened, labeled]
+    paths-ignore:
+      - "docs/**"
+      - "*.md"
   workflow_dispatch:
 
 permissions:
@@ -192,7 +192,7 @@ jobs:
             reruns: ""
             upload_benchmarks: true
             parallel_opts: ""  # No parallel for benchmarks (performance measurement)
-            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py"  # Go benchmark runs in dedicated job
+            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py --ignore=e2e_test/benchmarks/test_nightly_perf.py"  # Go and nightly benchmarks run in dedicated jobs
           - name: responses
             timeout: 45
             test_dirs: "e2e_test/responses"
