--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -210,7 +210,7 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
-            ignore_opts: ""
+            ignore_opts: "--ignore=e2e_test/router/test_vllm_pd_mmlu.py"  # vllm_pd runs in dedicated job
           - name: chat-completions-sglang
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
