--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -210,7 +210,7 @@ jobs:
             env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
-            ignore_opts: "--ignore=e2e_test/router/test_vllm_pd_mmlu.py"  # vllm_pd runs in dedicated job
+            ignore_opts: ""
           - name: chat-completions-sglang
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
@@ -234,7 +234,7 @@ jobs:
             ignore_opts: ""
           - name: vllm-pd
             timeout: 45
-            test_dirs: "e2e_test/router/test_vllm_pd_mmlu.py"
+            test_dirs: "e2e_test/router/test_pd_mmlu.py"
             extra_deps: ""
             env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
             reruns: "--reruns 2 --reruns-delay 5"
@@ -258,14 +258,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - name: Cache vLLM dependencies
+      - name: Cache flash-attn wheel
         if: matrix.setup_vllm
         uses: actions/cache@v4
         with:
-          path: |
-            ~/.cache/pip/wheels
-            ~/.cache/uv
-          key: vllm-deps-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
+          path: ~/.cache/pip/wheels
+          key: flash-attn-${{ runner.os }}-${{ hashFiles('scripts/ci_install_vllm.sh') }}
 
       - name: Restore TRT-LLM wheel cache
         id: trtllm-cache
