--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -39,6 +39,41 @@ jobs:
       - id: check
         uses: ./.github/actions/check-ci
 
+  determine-stages:
+    runs-on: k8s-runner-cpu
+    outputs:
+      run_smoke: ${{ steps.check.outputs.run_smoke }}
+      run_e2e: ${{ steps.check.outputs.run_e2e }}
+      run_benchmark: ${{ steps.check.outputs.run_benchmark }}
+    steps:
+      - name: Check stage labels
+        id: check
+        run: |
+          # Default: run all stages
+          run_smoke="true"
+          run_e2e="true"
+          run_benchmark="true"
+
+          # Check labels (only on pull_request events)
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            if [[ "${{ contains(github.event.pull_request.labels.*.name, 'ci:skip-smoke') }}" == "true" ]]; then
+              run_smoke="false"
+              echo "Skipping smoke tests (ci:skip-smoke label)"
+            fi
+            if [[ "${{ contains(github.event.pull_request.labels.*.name, 'ci:skip-e2e') }}" == "true" ]]; then
+              run_e2e="false"
+              echo "Skipping e2e tests (ci:skip-e2e label)"
+            fi
+            if [[ "${{ contains(github.event.pull_request.labels.*.name, 'ci:skip-benchmark') }}" == "true" ]]; then
+              run_benchmark="false"
+              echo "Skipping benchmarks (ci:skip-benchmark label)"
+            fi
+          fi
+
+          echo "run_smoke=$run_smoke" >> $GITHUB_OUTPUT
+          echo "run_e2e=$run_e2e" >> $GITHUB_OUTPUT
+          echo "run_benchmark=$run_benchmark" >> $GITHUB_OUTPUT
+
   build-wheel:
     needs: check-ci
     if: needs.check-ci.outputs.should_run == 'true'
@@ -176,34 +211,23 @@ jobs:
 
   gateway-e2e:
     name: ${{ matrix.name }}
-    needs: [check-ci, build-wheel]
-    if: needs.check-ci.outputs.should_run == 'true'
+    needs: [check-ci, build-wheel, determine-stages]
+    if: |
+      needs.check-ci.outputs.should_run == 'true' &&
+      (
+        (matrix.stage == 'smoke' && needs.determine-stages.outputs.run_smoke == 'true') ||
+        (matrix.stage == 'e2e' && needs.determine-stages.outputs.run_e2e == 'true') ||
+        (matrix.stage == 'benchmark' && needs.determine-stages.outputs.run_benchmark == 'true')
+      )
     permissions:
       contents: read
     strategy:
       fail-fast: false
       matrix:
         include:
-          - name: benchmarks
-            timeout: 32
-            test_dirs: "e2e_test/benchmarks"
-            extra_deps: "genai-bench==0.0.3"
-            env_vars: ""
-            reruns: ""
-            upload_benchmarks: true
-            parallel_opts: ""  # No parallel for benchmarks (performance measurement)
-            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py"  # Go benchmark runs in dedicated job
-          - name: responses
-            timeout: 45
-            test_dirs: "e2e_test/responses"
-            extra_deps: ""
-            env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-            reruns: "--reruns 2 --reruns-delay 5"
-            setup_oracle: true
-            setup_brave: true
-            parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
-            ignore_opts: ""
-          - name: e2e
+          # Stage 1: Smoke Tests (quick sanity checks)
+          - name: gw-sgl-smoke-test
+            stage: smoke
             timeout: 45
             test_dirs: "e2e_test/router e2e_test/embeddings"
             extra_deps: "pytest-parallel py"  # py is required for pytest-parallel with newer pytest
@@ -211,7 +235,36 @@ jobs:
             reruns: "--reruns 2 --reruns-delay 5"
             parallel_opts: "--workers 1 --tests-per-worker 4"  # Thread-based parallelism
             ignore_opts: ""
+          - name: gw-vllm-smoke-test
+            stage: smoke
+            timeout: 45
+            test_dirs: "e2e_test/router e2e_test/embeddings"
+            extra_deps: "pytest-parallel py"
+            env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: "--workers 1 --tests-per-worker 4"
+            test_filter: ""
+            setup_vllm: true
+            ignore_opts: ""
+            # vLLM: gRPC only, PD mode supported
+            # HTTP tests auto-skipped via @pytest.mark.skip_for_runtime("vllm")
+          - name: gw-trtllm-smoke-test
+            stage: smoke
+            timeout: 90
+            test_dirs: "e2e_test/router e2e_test/embeddings"
+            extra_deps: "pytest-parallel py"
+            env_vars: "E2E_RUNTIME=trtllm SHOW_WORKER_LOGS=1 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            parallel_opts: "--workers 1 --tests-per-worker 4"
+            test_filter: ""
+            setup_trtllm: true
+            ignore_opts: ""
+            # TRT-LLM: gRPC only, no PD mode
+            # HTTP and PD tests auto-skipped via markers
+
+          # Stage 2: E2E Tests (comprehensive testing)
           - name: chat-completions-sglang
+            stage: e2e
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
             extra_deps: "pytest-parallel py"
@@ -221,6 +274,7 @@ jobs:
             test_filter: ""
             ignore_opts: ""
           - name: chat-completions-vllm
+            stage: e2e
             timeout: 45
             test_dirs: "e2e_test/chat_completions"
             extra_deps: "pytest-parallel py"
@@ -232,17 +286,8 @@ jobs:
             test_filter: "-k 'not (5-grpc or 2-None-grpc or multiple_choices)'"
             setup_vllm: true
             ignore_opts: ""
-          - name: vllm-pd
-            timeout: 45
-            test_dirs: "e2e_test/router/test_pd_mmlu.py"
-            extra_deps: ""
-            env_vars: "E2E_RUNTIME=vllm SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
-            reruns: "--reruns 2 --reruns-delay 5"
-            parallel_opts: ""
-            test_filter: ""
-            setup_vllm: true
-            ignore_opts: ""
           - name: chat-completions-trtllm
+            stage: e2e
             timeout: 90
             test_dirs: "e2e_test/chat_completions"
             extra_deps: "pytest-parallel py"
@@ -252,6 +297,29 @@ jobs:
             test_filter: ""
             setup_trtllm: true
             ignore_opts: ""
+          - name: responses
+            stage: e2e
+            timeout: 45
+            test_dirs: "e2e_test/responses"
+            extra_deps: ""
+            env_vars: "SHOW_WORKER_LOGS=0 SHOW_ROUTER_LOGS=1"
+            reruns: "--reruns 2 --reruns-delay 5"
+            setup_oracle: true
+            setup_brave: true
+            parallel_opts: ""  # Cloud backend tests not compatible with parallel execution
+            ignore_opts: ""
+
+          # Stage 3: Benchmarks (performance)
+          - name: benchmarks
+            stage: benchmark
+            timeout: 32
+            test_dirs: "e2e_test/benchmarks"
+            extra_deps: "genai-bench==0.0.3"
+            env_vars: ""
+            reruns: ""
+            upload_benchmarks: true
+            parallel_opts: ""  # No parallel for benchmarks (performance measurement)
+            ignore_opts: "--ignore=e2e_test/benchmarks/test_go_bindings_perf.py"  # Go benchmark runs in dedicated job
     runs-on: k8s-runner-gpu
     timeout-minutes: ${{ matrix.timeout }}
     steps:
@@ -540,7 +608,7 @@ jobs:
           path: benchmark_go_bindings/
 
   finish:
-    needs: [check-ci, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-unit-tests, go-bindings-e2e]
+    needs: [check-ci, determine-stages, build-wheel, python-unit-tests, unit-tests, gateway-e2e, go-unit-tests, go-bindings-e2e]
     if: always()
     runs-on: k8s-runner-cpu
     permissions: {}
