fix(ci): remove labeled trigger to prevent mid-run restarts
Adding labels during a workflow run would trigger new runs, causing
the PR checks UI to show stale cancelled job statuses. Labels for
skipping stages should be added before pushing code.

--- a/.github/workflows/pr-test-rust.yml
+++ b/.github/workflows/pr-test-rust.yml
@@ -8,7 +8,7 @@ on:
       - "*.md"
   pull_request:
     branches: [ main ]
-    types: [opened, synchronize, reopened, labeled]
+    types: [opened, synchronize, reopened]
     paths-ignore:
       - "docs/**"
       - "*.md"
